Optimized database queries

--- a/index.html
+++ b/index.html
@@ -19,3 +19,4 @@ Temporary commit content 192
 Temporary commit content 214
 Temporary commit content 229
 Temporary commit content 239
+Temporary commit content 242
