Updated README with new features

--- a/index.html
+++ b/index.html
@@ -21,3 +21,4 @@ Temporary commit content 229
 Temporary commit content 239
 Temporary commit content 242
 Temporary commit content 266
+Temporary commit content 272
